syntax = "proto3";

package inspector;

option go_package = "github.com/xiaonanln/goverse/cmd/inspector/proto/inspector_pb";

message Empty {}

message Object {
  string class=1;
  string id = 2;
  int32 shard_id = 3;
}

message AddOrUpdateObjectRequest { 
  Object object = 1; 
  string node_address = 2; // e.g. "localhost:47000"
}

message RegisterNodeRequest {
  string advertise_address = 1;  // e.g. "localhost:47000"
  repeated Object objects = 2;
  repeated string connected_nodes = 3; // List of other node addresses this node is connected to
}

message RegisterNodeResponse {
}

message UnregisterNodeRequest {
  string advertise_address = 1;  // e.g. "localhost:47000"
}

message RemoveObjectRequest {
  string object_id = 1;
  string node_address = 2; // e.g. "localhost:47000"
}

message RegisterGateRequest {
  string advertise_address = 1;  // e.g. "localhost:49000"
  repeated string connected_nodes = 2; // List of node addresses this gate is connected to
}

message RegisterGateResponse {
}

message UnregisterGateRequest {
  string advertise_address = 1;  // e.g. "localhost:49000"
}

message UpdateConnectedNodesRequest {
  string advertise_address = 1;  // e.g. "localhost:47000" or "localhost:49000"
  repeated string connected_nodes = 2; // Updated list of connected node/gate addresses
}

service InspectorService {
  rpc AddOrUpdateObject(AddOrUpdateObjectRequest) returns (Empty);
  rpc RemoveObject(RemoveObjectRequest) returns (Empty);
  rpc RegisterNode(RegisterNodeRequest) returns (RegisterNodeResponse);
  rpc UnregisterNode(UnregisterNodeRequest) returns (Empty);
  rpc UpdateConnectedNodes(UpdateConnectedNodesRequest) returns (Empty);
  rpc RegisterGate(RegisterGateRequest) returns (RegisterGateResponse);
  rpc UnregisterGate(UnregisterGateRequest) returns (Empty);
  rpc Ping(Empty) returns (Empty);
}
